add authentication, rack-attack

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '2'
 services:
   db:
     image: postgres
+
+
   web:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
@@ -11,3 +13,15 @@ services:
       - "3000:3000"
     depends_on:
       - db
+
+  spring:
+    build: .
+    volumes:
+      - .:/pocket_waiter
+    command: spring server
+
+    # This ensures that the pid namespace is shared between the host
+    # and the container. It's not necessary to be able to run spring
+    # commands, but it is necessary for "spring status" and "spring stop"
+    # to work properly.
+    pid: host
