--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,14 +14,14 @@ services:
     depends_on:
       - db
 
-  spring:
-    build: .
-    volumes:
-      - .:/pocket_waiter
-    command: spring server
-
-    # This ensures that the pid namespace is shared between the host
-    # and the container. It's not necessary to be able to run spring
-    # commands, but it is necessary for "spring status" and "spring stop"
-    # to work properly.
-    pid: host
+  # spring:
+  #   build: .
+  #   volumes:
+  #     - .:/pocket_waiter
+  #   command: spring server
+  #
+  #   # This ensures that the pid namespace is shared between the host
+  #   # and the container. It's not necessary to be able to run spring
+  #   # commands, but it is necessary for "spring status" and "spring stop"
+  #   # to work properly.
+  #   pid: host
