--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,19 @@ services:
   db:
     image: postgres
 
-
   web:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
       - .:/pocket_waiter
+      - bundle:/bundle
     ports:
       - "3000:3000"
     depends_on:
       - db
+
+volumes:
+  bundle: {}
 
   # spring:
   #   build: .
